docs/reference/v1.0/overview.rst
Overview
########

The heart of the LimeSDR X3 board is Xilinx Artix-7 XC7A200T. Its main function is to transfer digital data between the PC and the board via the PCIe interface. The block diagram for LimeSDR X3 v1.0 board is as shown in Figure 3.

.. figure:: /images/PCIe_5GRadio_3v0_diagrams_r1_BD.png
  :width: 600

  Figure 3: LimeSDR X3 v1.0 board block diagram

LimeSDR X3 board picture with highlighted connectors and main components are presented in Figure 4 and Figure 5. 

.. figure:: /images/PCIe_5GRadio_v3.0_top_components.png
  :width: 600

  Figure 4: LimeSDR X3 v1.0 board top connectors and main components

.. figure:: /images/PCIe_5GRadio_v3.0_bot_components.png
  :width: 600

  Figure 5: LimeSDR X3 v1.0 board bottom connectors and main components

Description of board components is given in the Table 1.

.. table:: Table 1. Board components

  +----------------------------------------------------------------------------------------------------------------------------------------+
  |                                                          **Featured Devices**                                                          |
  +========================+=======================+=======================================================================================+
  | **Board Reference**    | **Type**              | **Description**                                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC1, IC4, IC21         | RF transceiver        | Lime Microsystems LMS7002M                                                            |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC51                   | FPGA                  | Xilinx Artix-7 XC7A200T in 676-FCBGA (27x27) package                                  |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC62, IC64, IC66, IC68 | Baseband ADC          | 14-bit, 160 MSPS, ADS4246                                                             |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC60, IC61             | Baseband DAC          | 16-bt, 250 MSPS, MAX5878                                                              |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC58                   | GNSS module           | GNSS receiver LYNQ N20B                                                               |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **Miscellaneous devices onboard**                                                                                                      |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC54                   | IC                    | Temperature sensor LM75                                                               |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC56, IC57             | IC                    | I2C secure key storage ATECC508A                                                      |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC63, IC65, IC67, IC69 | ADC driver            | ADC driver ADA4930-2                                                                  |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **Configuration, Status and Setup Elements**                                                                                           |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J14                    | JTAG chain pin header | FPGA programming pin header for Xilinx platform cable.                                |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | LED1, LED2, LED3, LED4 | Red-green status LEDs | User defined FPGA indication.                                                         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | LED5                   | Green status LED      | VCC3P3 power rail indication                                                          |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | LED6                   | Red-green status LED  | FPGA init indication.                                                                 |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **General User Input/Output**                                                                                                          |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J15, J19               | Pin header            | 2x PMOD connectors (8 FPGA GPIOs + 4 power pins, 0.1” pitch)                          |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | SW1                    | Switch                | 4-bit FPGA switch                                                                     |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **Memory Devices**                                                                                                                     |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC2, IC19, IC22        | EEPROM                | 128K (16K x 8) EEPROM connected to each LMS7002M                                      |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC55                   | EEPROM                | 128K (16K x 8) EEPROM connected to FPGA                                               |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC52/IC53              | Flash memory          | FPGA configuration Flash (128 or 256 Mbit)                                            |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **Clock Circuitry**                                                                                                                    |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  |                        |                       | 30.72 MHz voltage-controlled, oven controlled crystal oscillator                      |
  |                        |                       |                                                                                       |
  | XO3                    | VCOCXO                | used as a reference clock (connected by default).                                     |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  |                        |                       | Various VCTCXOs (30.72 MHz, 38.40 MHz, 40.00MHz) voltage-controlled, temperature      |
  |                        |                       |                                                                                       |
  | XO4-XO7                | VCTCXO                | compensated crystal oscillators used as a reference clock (not connected by default). |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC79                   | Clock generator       | Texas Instruments CDCM6208                                                            |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC74, IC78             | Clock buffer          | Texas Instruments LMK00101                                                            |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC76                   | Phase detector        | Analog devices ADF4002, used to synchronize reference clock to external clock         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC77                   | DAC                   | 16 bit DAC for XO VC tuning                                                           |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J29                    | U.FL/MMCX             | Reference clock input for phase detector (default)                                    |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J27                    | U.FL/MMCX             | Clock input (LMK1_CLK1_IN) (not connected by default)                                 |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J28                    | U.FL/MMCX             | Clock output (LMK1_CLKOUT)                                                            |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J30                    | 6 pin header          | External synchronization input                                                        |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J31                    | 6 pin header          | External synchronization output                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **Precision Time Protocol (White Rabbit) hardware**                                                                                    |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC70, IC73             | DAC                   | 16 bit DAC for XOs VC tuning                                                          |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | XO1                    | VCTCXO                | 25 MHz VCTCXO                                                                         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | XO2                    | VCXO                  | 20 MHz VCXO                                                                           |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | IC71                   | Clock generator       | Texas Instruments CDCM61004                                                           |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J24                    | SFP cage              | SFP cage                                                                              |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J25                    | SMA                   | PTP clock output PTP_CLK2_OUT (from FPGA)                                             |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J26                    | U.FL/MMCX             | PTP clock output PTP_CLK3_OUT (from FPGA)                                             |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **RF connectors**                                                                                                                      |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J1                     | U.FL/MMCX             | LMS1 RX1 port                                                                         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J2                     | U.FL/MMCX             | LMS1 RX2 port                                                                         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J3                     | U.FL/MMCX             | LMS3 TX2_2 port                                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J4                     | U.FL/MMCX             | LMS3 RX1_W port                                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J5                     | U.FL/MMCX             | LMS3 RX2_W port                                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J6                     | U.FL/MMCX             | LMS3 RX1_H port                                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J7                     | U.FL/MMCX             | LMS3 RX2_H port                                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J8                     | SMA                   | LMS1_TX1 port                                                                         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J9                     | SMA                   | LMS1_TX2 port                                                                         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J10                    | U.FL/MMCX             | LMS2 TRX1 port                                                                        |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J11                    | U.FL/MMCX             | LMS2 RX1 port                                                                         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J12                    | U.FL/MMCX             | LMS2 TRX2 port                                                                        |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J13                    | U.FL/MMCX             | LMS2 RX2 port                                                                         |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J21                    | SMA                   | GNSS module active antenna connector                                                  |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J22                    | SMA                   | External SMA to internal U.FL/MMCX                                                    |
  +------------------------+-----------------------+                                                                                       |
  | J23                    | U.FL/MMCX             |                                                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **Power Supply**                                                                                                                       |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J34                    | Pin header            | 12V header for powering external devices (0.2” pitch)                                 |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J35                    | Pin header            | 12V header for powering external devices (0.1” pitch)                                 |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J36                    | 6 pin PCIe power      | 12V PCIe power connector for powering board                                           |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | **Other**                                                                                                                              |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+
  | J16, J17, J18          | Header                | Fan connection headers. Selectable voltage 3.3V, 5V or 12V (5V default).              |
  +------------------------+-----------------------+---------------------------------------------------------------------------------------+

A more detailed description is provided in the following sections.

